<resources>
    <string name="app_name">Gym4House</string>
    <string name="register_title">Regístrate en GYM4HOUSE</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_apellido">Apellido</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="hint_role">Rol (ej. Cliente)</string>
    <string name="button_register">Registrar</string>
    <string name="main_activity_welcome_text">Bienvenido a Gym4House (Contenido principal)</string>
    <string name="welcome_message">Bienvenido a GYM4HOUSE</string>
    <string name="sign_in_title">Iniciar Sesión en GYM4HOUSE</string>
    <string name="button_create_account">Crear Cuenta</string>
    <string name="button_sign_in">Iniciar Sesión</string>
    <string name="welcome_sign_in_prompt">Usa tu cuenta para iniciar sesión en GymForHouse</string>
    <string name="button_sign_in_gymforhouse">Iniciar sesión con Gym4House</string>
    <string name="or_sign_in_with">O puedes iniciar sesión con</string>
    <string name="button_sign_in_gmail">Inicia sesión con Gmail</string>
    <string name="terms_privacy_notice">Al iniciar sesión aceptas nuestros Condiciones de uso y Política de privacidad.</string>
    <string name="logo_content_description">Logo de la aplicación GymForHouse</string>

    <string name="hint_edad">Edad</string>
    <string name="hint_peso_kg">Peso (kg)</string>
    <string name="hint_altura_cm">Altura (cm)</string>
    <string name="hint_objetivo">Objetivo (ej. perder peso, ganar músculo)</string>
    <string name="hint_nivel_experiencia">Nivel de Experiencia (ej. principiante, intermedio, avanzado)</string>

    <string name="already_have_account_text">¿Ya tienes una cuenta? Inicia Sesión</string>
    <color name="blue_link">#2196F3</color>


    <string name="no_account_yet_text">¿No tienes una cuenta? Regístrate aquí</string>
    <string-array name="tipos_rutina_array">
        <item>Todos los Tipos</item>
        <item>Tren Superior</item>
        <item>Tren Inferior</item>
        <item>Full Body</item>
        <item>Cardio</item>
        <item>Core</item>
    </string-array>

    <string-array name="niveles_rutina_array">
        <item>Todos los Niveles</item>
        <item>Principiante</item>
        <item>Intermedio</item>
        <item>Avanzado</item>
    </string-array>


    <string-array name="objetivos_usuario_array">
        <item>Selecciona tu Objetivo</item>
        <item>Perder Peso</item>
        <item>Ganar Masa Muscular</item>
        <item>Mejorar Resistencia</item>
        <item>Mantener Forma</item>
        <item>Aumentar Fuerza</item>
    </string-array>
    <!-- Add these lines for the notification channel -->
    <string name="channel_name">Daily Reminder</string>
    <string name="channel_description">Notifications for daily workout reminders</string>

    <string name="hint_exercise_type">Tipo de Ejercicio Preferido</string>

    <string-array name="exercise_type_options">
        <item>@string/hint_exercise_type</item> <!-- El hint como primera opción -->
        <item>Cardio</item>
        <item>Fuerza</item>
        <item>Resistencia</item>
        <item>Flexibilidad</item>
        <item>Mixto</item>
    </string-array>

    <string name="hint_activity_level">Nivel de Actividad Física</string>
    <string-array name="activity_level_options">
        <item>@string/hint_activity_level</item>
        <item>Sedentario</item>
        <item>Moderado</item>
        <item>Activo</item>
        <item>Muy Activo</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- <string name="app_name">GYM4HOUSE</string> -->
</resources>